// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect should be clearable with prop, dirty and multi select 1`] = `

<div tabindex="0"
     role="combobox"
     class="input-group input-group--dirty input-group--append-icon input-group--text-field input-group--select input-group--multiple primary--text"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <div class="input-group__selections__comma">
        1
      </div>
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
      >
        <div class="card"
             style="height: auto;"
             data-ripple="false"
        >
          <ul data-uid="28"
              class="list"
          >
            <li>
              <a href="javascript:;"
                 class="list__tile list__tile--link list__tile--active"
                 data-ripple="true"
              >
                <div class="list__tile__action list__tile__action--select-multi">
                  <div tabindex="0"
                       role="checkbox"
                       aria-checked="true"
                       class="input-group input-group--dirty checkbox input-group--selection-controls input-group--active"
                  >
                    <div class="input-group__input">
                      <i class="material-icons icon icon--selection-control fade-transition-leave fade-transition-leave-active">
                        check_box_outline_blank
                      </i>
                      <i class="material-icons icon icon--selection-control icon--checkbox fade-transition-enter fade-transition-enter-active"
                         style="-webkit-transform-origin: top center 0;"
                      >
                        check_box
                      </i>
                      <div class="input-group--selection-controls__ripple"
                           data-ripple="true"
                      >
                      </div>
                    </div>
                    <div class="input-group__details">
                      <div class="input-group__messages">
                      </div>
                    </div>
                  </div>
                </div>
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    1
                  </div>
                </div>
              </a>
            </li>
            <li>
              <a href="javascript:;"
                 class="list__tile list__tile--link"
                 data-ripple="true"
              >
                <div class="list__tile__action list__tile__action--select-multi">
                  <div tabindex="0"
                       role="checkbox"
                       aria-checked="false"
                       class="input-group checkbox input-group--selection-controls"
                  >
                    <div class="input-group__input">
                      <i class="material-icons icon icon--selection-control">
                        check_box_outline_blank
                      </i>
                      <div class="input-group--selection-controls__ripple"
                           data-ripple="true"
                      >
                      </div>
                    </div>
                    <div class="input-group__details">
                      <div class="input-group__messages">
                      </div>
                    </div>
                  </div>
                </div>
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    2
                  </div>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="material-icons icon input-group__append-icon input-group__icon-cb input-group__icon-clearable"
    >
      clear
    </i>
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;

exports[`VSelect should be clearable with prop, dirty and multi select 2`] = `

<div tabindex="0"
     role="combobox"
     class="input-group input-group--append-icon input-group--text-field input-group--select input-group--multiple primary--text"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select menuable__content__active"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 10; display: none; z-index: 10;"
      >
        <div class="card"
             style="height: auto;"
             data-ripple="false"
        >
          <ul data-uid="28"
              class="list"
          >
            <li>
              <a href="javascript:;"
                 class="list__tile list__tile--link"
                 data-ripple="true"
              >
                <div class="list__tile__action list__tile__action--select-multi">
                  <div tabindex="0"
                       role="checkbox"
                       aria-checked="false"
                       class="input-group checkbox input-group--selection-controls"
                  >
                    <div class="input-group__input">
                      <i class="material-icons icon icon--selection-control icon--checkbox fade-transition-leave fade-transition-leave-active"
                         style="-webkit-transform-origin: top center 0;"
                      >
                        check_box
                      </i>
                      <i class="material-icons icon icon--selection-control fade-transition-enter fade-transition-enter-active"
                         style="-webkit-transform-origin: top center 0;"
                      >
                        check_box_outline_blank
                      </i>
                      <div class="input-group--selection-controls__ripple"
                           data-ripple="true"
                      >
                      </div>
                    </div>
                    <div class="input-group__details">
                      <div class="input-group__messages">
                      </div>
                    </div>
                  </div>
                </div>
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    1
                  </div>
                </div>
              </a>
            </li>
            <li>
              <a href="javascript:;"
                 class="list__tile list__tile--link"
                 data-ripple="true"
              >
                <div class="list__tile__action list__tile__action--select-multi">
                  <div tabindex="0"
                       role="checkbox"
                       aria-checked="false"
                       class="input-group checkbox input-group--selection-controls"
                  >
                    <div class="input-group__input">
                      <i class="material-icons icon icon--selection-control">
                        check_box_outline_blank
                      </i>
                      <div class="input-group--selection-controls__ripple"
                           data-ripple="true"
                      >
                      </div>
                    </div>
                    <div class="input-group__details">
                      <div class="input-group__messages">
                      </div>
                    </div>
                  </div>
                </div>
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    2
                  </div>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="material-icons icon input-group__append-icon input-group__icon-cb"
    >
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;

exports[`VSelect should be clearable with prop, dirty and single select 1`] = `

<div tabindex="0"
     role="combobox"
     class="input-group input-group--dirty input-group--append-icon input-group--text-field input-group--select primary--text"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <div class="input-group__selections__comma">
        1
      </div>
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
      >
        <div class="card"
             style="height: auto;"
             data-ripple="false"
        >
          <ul data-uid="20"
              class="list"
          >
            <li>
              <a href="javascript:;"
                 class="list__tile list__tile--link list__tile--active"
                 data-ripple="true"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    1
                  </div>
                </div>
              </a>
            </li>
            <li>
              <a href="javascript:;"
                 class="list__tile list__tile--link"
                 data-ripple="true"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    2
                  </div>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="material-icons icon input-group__append-icon input-group__icon-cb input-group__icon-clearable"
    >
      clear
    </i>
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;

exports[`VSelect should be clearable with prop, dirty and single select 2`] = `

<div tabindex="0"
     role="combobox"
     class="input-group input-group--append-icon input-group--text-field input-group--select primary--text"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <input disabled="disabled"
             tabindex="-1"
             class="input-group--select__autocomplete"
             style="display: none;"
      >
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select menuable__content__active"
           style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 10; display: none; z-index: 10;"
      >
        <div class="card"
             style="height: auto;"
             data-ripple="false"
        >
          <ul data-uid="20"
              class="list"
          >
            <li>
              <a href="javascript:;"
                 class="list__tile list__tile--link"
                 data-ripple="true"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    1
                  </div>
                </div>
              </a>
            </li>
            <li>
              <a href="javascript:;"
                 class="list__tile list__tile--link"
                 data-ripple="true"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    2
                  </div>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i aria-hidden="true"
       class="material-icons icon input-group__append-icon input-group__icon-cb"
    >
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;
